reduce logo height + fix overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -12670,6 +12670,10 @@ hr.divider-light {
   color: #212529;
 }
 
+#mainNav .navbar-brand img {
+  height: 65px;
+}
+
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -12770,9 +12774,11 @@ header.masthead .h1 {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: 100vh;
-    min-height: 40rem;
+    /* height: 100vh; */
     padding-top: 4.5rem;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* or row, depending on your layout */
     padding-bottom: 0;
   }
 
